--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -16,6 +16,7 @@
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
 \Xnonbreakableafternumber
+\Xinplaceoflemmaseparator{0em}
 \Xnumberonlyfirstinline
 \Xnumberonlyfirstintwolines
 \parindentX
@@ -266,7 +267,7 @@ q\textit{uá}nd presto se va el plazer,\\
 cómo después de acordado\\
 da dolor,\\
 cómo a nuestro paresçer\\
-\edtext{q\textit{ua}lq\textit{uie}ra}{\Afootnote{qualqujer \textit{LB3}}} tie\textit{n}po pasado \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{sapado \textit{err. LB3}}}\\
+\edtext{q\textit{ua}lq\textit{uie}ra}{\Afootnote{qualqujer \textit{LB3}}} tie\textit{n}po pasado \edtext{}{\Afootnote[nosep]{sapado \textit{err. LB3}}}\\
 fue mejor.
 \pend
 
@@ -317,8 +318,8 @@ no \edtext{curo}{\Afootnote{cureys \textit{LB3}}} de sus \edtext{ficçiones}{\Af
 \edtext{que traen}{\Afootnote{porque traen \textit{HH1}}} yervas secretas\\
 sus sabores.\\
 Aquel solo me encomie\textit{n}do,\\
-aq\textit{ue}l solo invoco yo \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{de verdat \textit{a. corr. LB3}}}\\
-de verdad\footnoteC{En \textit{LB3} se redactó \comillas{[de ver] dat} luego de \comillas{ynuoco yo}. Quizá el redactor inicial —o un secundario [\textit{cfr. gl.} XL]— tachó el fragmento por la errónea ubicación y corrigió \comillas{de verdad} en un pequeño espacio entre los vv. 44 y 46. Puesto que se modificó \textit{verdat} por \textit{verdad} en la corrección, para la fijación se reemplazó \textit{t} en \textit{deydat} por \textit{d} para conservar la rima.} \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{p. corr. LB3}}},\\
+aq\textit{ue}l solo invoco yo \edtext{}{\Afootnote[nosep]{de verdat \textit{a. corr. LB3}}}\\
+de verdad\footnoteC{En \textit{LB3} se redactó \comillas{[de ver] dat} luego de \comillas{ynuoco yo}. Quizá el redactor inicial —o un secundario [\textit{cfr. gl.} XL]— tachó el fragmento por la errónea ubicación y corrigió \comillas{de verdad} en un pequeño espacio entre los vv. 44 y 46. Puesto que se modificó \textit{verdat} por \textit{verdad} en la corrección, para la fijación se reemplazó \textit{t} en \textit{deydat} por \textit{d} para conservar la rima.} \edtext{}{\Afootnote[nosep]{\textit{p. corr. LB3}}},\\
 que en este mu\textit{n}do \edtext{bivie\textit{n}do}{\lemma{biuie\textit{n}do}\Afootnote{vinjendo \textit{HH1}}},\\
 el mu\textit{n}do no conosçió\\
 su deidad.
@@ -460,7 +461,7 @@ co\textit{n} su dueño;\\
 \edtext{por eso}{\Afootnote{por esto \textit{82*JM}; mas por eso \textit{HH1}}} no \edtext{nos engañen}{\Afootnote{nos engañe \textit{LB3}; sengañen \textit{HH1}}}\footnoteC{Se adoptan las lecciones de número plural del texto mayoritario frente a las de número singular —esto es, \comillas{aco\textit{n}pañe}, \comillas{llegue} y \comillas{engañe}— que porta \textit{LB3}.},\\
 pues se va la vida \edtext{apriesa}{\Afootnote{espesa \textit{MN19}}}\\
 como sueño.\\
-Y\edtext{}{\lemma{y}\Afootnote{q\textit{ue HH1}}} los \edtext{plazeres}{\Afootnote{deleytes \textit{δ}, \textit{ε}, \textit{83*IM}}} de acá\\
+\edtext{Y}{\lemma{y}\Afootnote{q\textit{ue HH1}}} los \edtext{plazeres}{\Afootnote{deleytes \textit{δ}, \textit{ε}, \textit{83*IM}}} de acá\\
 son, en q\textit{ue} nos deleitamos,\\
 tenporales,\\
 y los torme\textit{n}tos de allá,\\
@@ -531,7 +532,7 @@ Los infantes de Aragó\textit{n},\\
 ¿Qué fue de ta\textit{n}to galán?\\
 ¿Qué fue de tanta inve\textit{n}çión\\
 como \edtext{traxiero\textit{n}}{\Afootnote{truxieron \textit{δ}, \textit{MN19}}}?\\
-Las justas y los torneos,\edtext{}{\linenum{|||||189}\lemma{\hspace*{-1em}}\Afootnote[nosep]{\hspace*{-0.5em}/190–192 ~\textit{transp. 86*RL}}}\\
+Las justas y los torneos,\edtext{}{\linenum{|||||189}\Afootnote[nosep]{\hspace*{-0.5em}/190–192 ~\textit{transp. 86*RL}}}\\
 parame\textit{n}tos, bordaduras\\
 y çimeras\\
 ¿fuero\textit{n} sino devaneos?\\
@@ -723,7 +724,7 @@ Y a los bravos \edtext{y dañosos}{\Afootnote{y furiosos \textit{82*JM}; y sober
 	[XXVII]\footnoteA{[XXVII] XV en \textit{82*JM}. || \comillas{conpara} \textit{LB3}.}
 \end{center}
 \pstart
-En \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{en [la] \textit{eras. LB3}}} ventura, \edtext{Otavïano}{\lemma{otauiano}\Afootnote{octoniano \textit{82*JM}}},\\
+En \edtext{}{\Afootnote[nosep]{en [la] \textit{eras. LB3}}} ventura, \edtext{Otavïano}{\lemma{otauiano}\Afootnote{octoniano \textit{82*JM}}},\\
 Jullo Çésar en vençer\\
 y batallar;\\
 en la virtud, Africano,\\
@@ -765,7 +766,7 @@ ni baxillas,\\
 mas fizo \edtext{guerras a moros}{\Afootnote{guerra a los moros \textit{δ}, \textit{MN19}, \textit{83*IM}; gran guerra a moros \textit{HH1}}}\footnoteC{Se siguen las lecciones plurales de \textit{LB3}, porque don Rodrigo Manrique probablemente no participó en una guerra, sino en otras más. Es necesario atender a los datos proporcionados por Fernando del Pulgar en su \textit{Claros varones de Castilla} [ca. 1480-1486] que, en un capítulo dedicado al maestre, el XIII, titulado «El Maestre Don Rodrigo Manrrique, Conde de Paredes» —que ya citó \textcite[cap. IX]{MenendezYPelayo1944}—, los recoge con gran detalle. A continuación, el pasaje según la edición crítica de Tate:\\
 	\noindent\hspace*{0.5cm}«\textit{En las batallas ⁊ muchos recuentros que ovo con moros ⁊ con christianos este cavallero fue el que, mostrando grand esfuerço a los suyo, fería primero en los contrarios. E las gentes de su conpañía, visto el efuerço de su capitán, todos le seguían ⁊ cobravan osadía de pelear. Tenía tan grand conoscimiento de las cosas del canpo, ⁊ proveí[a]las en tal manera que donde él fue principal capitán nunca puso su gente en logar do se oviese de retraer, porque bolver las espaldas al enemigo era tan ageno que su ánimo que elegía antes de recebir la muerte peleando que salvar la vida huyendo.}\\ 
 	\noindent\hspace*{0.5cm}»\textit{Este cavallero osó acometer grandes fazañas. Especialmente escaló una noche la cibdad de Huesca, que es del reino de Granada. E como quier que subiendo el escala los suyos fueron sentidos de los moros, ⁊ fueron algunos derribados del adarve ⁊ feridos en la subida} [...] \textit{subieron el muro peleando ⁊ no fallescieron de sus fuerças defendiéndolo, aunque veían los unos derramar su sangre, los otros caer de la cerca. E de esta manera, matando de los moros ⁊ muriendo de los suyos, este capitán, ferido en el braço de una saeta, peleando entró la cibdad e retroxo los moros fasta que los cercó en la fortaleza.} [...] \textit{Este cavallero duró ⁊ fizo durar a los suyos conbatiendo los moros que tenía cercados, e resistiendo a los moros que le tenía cercado por espacio de dos días, fasta que vino el socorro }[...] \textit{Ganada aquella cibdad, dexado en ella por capitán a un su hermano llamado Gómes Manrrique, ganó otras fortalezas en la comarca. Socorrió muchas vezes algunas cibdades ⁊ villa ⁊ capitanes christianos en tienpo de estrema necesidad. ⁊ fizo tanta guerra en aquellas tierras que en el reino de Granada el nonbre de Rodrigo Ma[n]rrique fue mucho tienpo a los moros grand terror.}»}\\
-gana\textit{n}do sus fortalezas \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{fortalezas [y villas] \textit{eras. LB3}}}\\
+gana\textit{n}do sus fortalezas \edtext{}{\Afootnote[nosep]{fortalezas [y villas] \textit{eras. LB3}}}\\
 y sus villas;\\
 y en las lides que vençió,\\
 \edtext{muchos moros y cavallos}{\Afootnote{quantos moros ⁊ cauallos \textit{86*RL}; muchos caualleros y cauallos \textit{83*IM}}}\\                                      
@@ -820,7 +821,7 @@ las falló,\\
 mas por çercos y por guerras\\
 y por fuerça de sus manos\\ 
 las \edtext{cobró}{\lemma{cobro}\Afootnote{gano \textit{HH1}}}.\\
-Pues nuestro rey natural,\edtext{}{\linenum{|||||380}\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{transp. LB3} = \comillas{si de las obras que obro} / \comillas{el nuestro rey natural}}}\\
+Pues nuestro rey natural,\edtext{}{\linenum{|||||380}\Afootnote[nosep]{\textit{transp. LB3} = \comillas{si de las obras que obro} / \comillas{el nuestro rey natural}}}\\
 si de las obras que obró\\
 fue servido,\\
 dígalo el de Portugal,\\
@@ -913,7 +914,7 @@ por las manos;\\
 y co\textit{n} esta confiança\\
 y co\textit{n} la fe ta\textit{n} entera\\
 que tenéis,\\
-partid con buena \edtext{}{\lemma{\hspace*{-1em}}\Afootnote[nosep]{bua/bna/vna \textit{LB3}}}\footnoteC{b[uen]a \textit{LB3} (?). En el manuscrito hay una mancha de tinta borrada en el folio arriba de «ua»/«na», que no propicia distinguir correctamente si es un signo de contracción  ̅ , leyéndose así «buena»/«buena» —el copista confunde \textit{n} y \textit{u} incluso en otros lugares del manuscrito—, o constituye un error, «bua». \textcite{PérezPriego1990,PérezPriego2017} y \textcite{Severin2000} leen en conjunto «vna»; Beltrán lee «bua», y sostiene que yace «con corrección, o abreviatura poco visible, interlineada» \textcite[123]{Beltrán1991}.} espera\textit{n}ça,\\
+partid con buena \edtext{}{\Afootnote[nosep]{bua/bna/vna \textit{LB3}}}\footnoteC{b[uen]a \textit{LB3} (?). En el manuscrito hay una mancha de tinta borrada en el folio arriba de «ua»/«na», que no propicia distinguir correctamente si es un signo de contracción  ̅ , leyéndose así «buena»/«buena» —el copista confunde \textit{n} y \textit{u} incluso en otros lugares del manuscrito—, o constituye un error, «bua». \textcite{PérezPriego1990,PérezPriego2017} y \textcite{Severin2000} leen en conjunto «vna»; Beltrán lee «bua», y sostiene que yace «con corrección, o abreviatura poco visible, interlineada» \textcite[123]{Beltrán1991}.} espera\textit{n}ça,\\
 \edtext{que la vida verdadera}{\Afootnote{estotra vida tercera \textit{δ}, \textit{MN19}, \textit{83*IM}}}\\                                                                           
 \edtext{cobraréis}{\lemma{cobrareys}\Afootnote{ganareys \textit{δ}, \textit{MN19}, \textit{83*IM}}}.» 
 \pend
@@ -962,7 +963,7 @@ Así, co\textit{n} tal ente\textit{n}der\\
 todos sentidos humanos\\
 \edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteC{«oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} —y el de Beltrán, en parte—, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} —como diccionario antiguo—, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral —en el vocablo—; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. \textcite{Conde2009} sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción del \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}. \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] —aquel, a su vez, siguiendo a Avicena y su \textit{De anima}—, son la \textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}. Luego, cita dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición de Kerkhof]. Siguiendo esas influencias, resulta en una unidad entre \textit{sentidos} y \textit{entendimiento}, y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}, implicaría en quebrar tal unidad al \comillas{deshacerse} de ambas; y al tratarse de una unidad —siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición—, la lección, como se estudia en ecdótica, no puede ir contra el propio autor.\\ \noindent\hspace*{0.5cm} Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es, «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia la lección \textit{conservados}.}\\
 çercado de su muger\\
-\edtext{}{\linenum{|||||480}\lemma{\hspace*{-1em}}\Afootnote[nosep]{\textit{sec. m. LB3}}}\edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos \textit{LB3}; y de fijos y de ermanos \textit{82*JM}, \textit{83*IM}}}\\                                                                 
+\edtext{}{\linenum{|||||480}\Afootnote[nosep]{\textit{sec. m. LB3}}}\edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos \textit{LB3}; y de fijos y de ermanos \textit{82*JM}, \textit{83*IM}}}\\                                                                 
 y criados,\\
 dio el alma a quien \edtext{ge la dio}{\lemma{geladio}\Afootnote{gloria dio \textit{LB3}}},\\
 el qual \edtext{la ponga}{\lemma{laponga}\Afootnote{ladio \textit{86*RL}}} en el cielo\\
