--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -57,7 +57,7 @@
 }
 	\newpage
 
-\null
+\hskip0pt
 \vfill
 \begin{flushright}
 	\textit{Documento procesado en} LuaLaTeX \textit{con el paquete} Reledmac \textit{de Maïeul Rouquette}.
