--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -26,11 +26,7 @@
 \newcommand{\tsup}[1]{\textsuperscript{#1}}
 \renewcommand{\thefootnoteA}{}
 \fnpos{critical-familiar}
-\fnpos{%
-	{A}{familiar},
-	{A}{critical},%
-	{C}{familiar},%
-}
+\fnpos{{A}{familiar},{A}{critical},{C}{familiar}}
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 \usetikzlibrary{positioning}
