--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -10,9 +10,9 @@
 \setlength{\bibhang}{0.5cm}
 \addbibresource{bibliography.bib}
 \usepackage{graphicx}
-\title{COPLAS POR LA MVERTE DE SV PADRE}
-\author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
-\date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\title{CARMINA OB MORTEM PATRIS}
+\author{\fontsize{14}{11.96}\selectfont GIORGII MANRICI}
+\date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDITIO CRITICA LIMINARIS}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
 \Xnonbreakableafternumber
