--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -10,9 +10,9 @@
 \setlength{\bibhang}{0.5cm}
 \addbibresource{bibliography.bib}
 \usepackage{graphicx}
-\title{CARMINA OB MORTEM PATRIS}
-\author{\fontsize{14}{11.96}\selectfont GIORGII MANRICI}
-\date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDITIO CRITICA LIMINARIS}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
+\title{COPLAS POR LA MVERTE DE SV PADRE}
+\author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
+\date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRITICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %Aquí cierran los comandos para el documento.
 \Xarrangement{paragraph}
 \Xnonbreakableafternumber
@@ -433,7 +433,7 @@ en una cosa.
 \edtext{Y pues}{\lemma{y pues}\Afootnote{pero \textit{δ}, \textit{ε}, \textit{83*IM}}} digo que \edtext{acompañen}{\Afootnote{aco\textit{n}pañe \textit{LB3}}}\\
 y \edtext{lleguen}{\Afootnote{llegue \textit{LB3}}} fasta la huesa\\
 co\textit{n} su dueño;\\
-\edtext{por eso}{\Afootnote{por esto \textit{82*JM}; mas por eso \textit{HH1}}} no \edtext{nos engañen}{\Afootnote{nos engañe \textit{LB3}; sengañen \textit{HH1}}}\footnoteC{Se adoptan las lecciones de número plural del texto mayoritario frente a las de número singular —esto es, \comillas{aco\textit{n}pañe}, \comillas{llegue} y \comillas{engañe}— que porta \textit{LB3}.},\\
+\edtext{por eso}{\Afootnote{por esto \textit{82*JM}; mas por eso \textit{HH1}}} no \edtext{nos engañen}{\Afootnote{nos engañe \textit{LB3}; sengañen \textit{HH1}}}\footnoteC{Se adoptaron las lecciones plurales del texto mayoritario frente a las de número singular —esto es, \comillas{aco\textit{n}pañe}, \comillas{llegue} y \comillas{engañe}— que porta \textit{LB3}.},\\
 pues se va la vida \edtext{apriesa}{\Afootnote{espesa \textit{MN19}}}\\
 como sueño.\\
 \edtext{Y}{\lemma{y}\Afootnote{q\textit{ue HH1}}} los \edtext{plazeres}{\Afootnote{deleytes \textit{δ}, \textit{ε}, \textit{83*IM}}} de acá\\
