--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -105,7 +105,7 @@ Manuscrito en papel; 21x15cm.; copia del s. XVIII de un manuscrito de finales de
 
 \textit{83*IM} = \textit{Cancionero de fray Íñigo de Mendoza}; BNE, INC/897.
 
-Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67\tsup{r.}-70\tsup{r.} contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. \url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}.
+Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fols.; los ff. 67\tsup{r.}-70\tsup{r.} contienen las coplas con la rúbrica \comillas{Coplas que hizo do\textit{n} jorge manrriq\textit{ue} ala muerte del maestre de santiago do\textit{n} rodrigo manrique su padre}; existen dos ejemplares y se hallan uno, en la Biblioteca Nacional de España [INC/897], y otro, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [38-I-22]. \url{https://bdh-rd.bne.es/viewer.vm?id=0000176297&page=1}
 
 \section*{\fontsize{13}{14.35}\selectfont CRITERIOS DE EDICIÓN}
 \addcontentsline{toc}{section}{Criterios de edición}
