--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -4,6 +4,7 @@
 \usepackage{fontspec}
 \usepackage[paperwidth=17.5cm,paperheight=25.5cm,top=1.4cm,inner=1.95cm,outer=1.65cm,bottom=2.54cm]{geometry}
 \usepackage{polyglossia}
+\usepackage[breaklinks=true,hidelinks]{hyperref}
 \usepackage{tikz}
 \usepackage[backend=biber,style=apa,url=true]{biblatex}
 \setlength{\parindent}{0.5cm}
@@ -48,6 +49,7 @@
 \usepackage{enumitem}
 \setlist{nosep,noitemsep,parsep=0pt}
 %
+%
 
 \begin{document}
 	{\pagenumbering{gobble}
@@ -89,7 +91,7 @@ Manuscrito en papel con marcas de agua; de finales de 1470 e inicios de 1480; 19
 
 \textit{82*JM} = \textit{Vita Christi por fray Íñigo de Mendoza}; RBME, 100-II-17.
 
-Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41\tsup{r.}-44\tsup{v.} contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm. 3]; plausible \textit{editio princeps}. \url{https://rbdigital.realbiblioteca.es/files/manifests/esc_100-II-17.json}\vspace{5pt}
+Impresión incunable; tipografía gótica a doble columna; ca. 1480-1484, Zaragosa?; 52 fols.; los ff. 41\tsup{r.}-44\tsup{v.} contienen las coplas con la rúbrica \comillas{Dezir de don jorge manrriq\textit{ue} por la muerte de su padre}; hay dos ejemplares y se hallan: uno, en la Real Biblioteca del Monasterio de San Lorenzo de El Escorial [100-II-17], y el otro, en la Biblioteca Comunale de Palermo [Esp-XI, F. 56, núm. 3]; plausible \textit{editio princeps}. \url{https://rbme.patrimonionacional.es/s/rbme/item/14443#?xywh=-1601%2C-39%2C4854%2C2165}\vspace{5pt}
 
 \textit{86*RL} = \textit{Cancionero de Ramón de Llavia}; BNE, INC/2567.
 
