--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -188,8 +188,8 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 \printbibliography[heading=none]
 \newpage
 
-\section*{\raggedleft \fontsize{13}{14.35}\selectfont TEXTO Y APARATO CRÍTICO}
-\addcontentsline{toc}{section}{Texto y aparato crítico}
+\section*{\raggedleft \fontsize{13}{14.35}\selectfont TEXTO Y APARATO CRÍTICOS}
+\addcontentsline{toc}{section}{Texto y aparato críticos}
 \newpage
 
 \section*{\fontsize{13}{14.35}\selectfont CONSPECTVS SIGLORVM}
