--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -60,6 +60,10 @@
 \hskip0pt
 \vfill
 \begin{flushright}
+	\textit{Edición preparada por} I. Brachamons Letesmus.
+\end{flushright}
+
+\begin{flushright}
 	\textit{Documento procesado en} LuaLaTeX \textit{con el paquete} Reledmac \textit{de Maïeul Rouquette}.
 \end{flushright}
 \newpage
