--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -60,7 +60,7 @@
 \hskip0pt
 \vfill
 \begin{flushright}
-	\textit{Edición preparada por} I. Brachamons Letesmus.
+	\textit{Edición preparada por I. Brachamons Letesmus}.
 \end{flushright}
 
 \begin{flushright}
@@ -80,11 +80,11 @@ Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su f
 
 \comillas{[...] \textit{peleaban los más días con el marqués de Villena e con su gente, e había entre ellos algunos recuentros. En uno de los quales, el capitán don Jorge Manrique se metió con tanta osadía entres los enemigos que, por no ser visto de los suyos para que fuera socorrido, le firieron de muchos colpes, e murió peleando cerca d las puertas del castillo de Garcimuñoz, donde acaeció aquella pelea, en la qual murieron algunos escuderos e peones de la una e la otra parte.}}\footnoteC{[De la guerra que se fizo contra el marqués de Villena en Escalona y en el Marquesado]. En la ed. de Carriazo, aquí utilizada, vol. I, se ubica en la pág. 358; en la \textit{editio princeps}, atribuida a Nebrija, de 1565, en el cap. C, f. 120r.; en la ed. de 1780 [Valencia], en \comillas{Segunda parte}, cap. LXXXII, pág. 146.} \vspace{5pt}
 
-Las \textit{Coplas por la muerte de su padre} son una «colección» de coplas escritas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} —tres octosílabos y un tetrasílabo—, lenguaje llano y culto, rimas consonantes y posee erudición histórica, filosófica y teológica.
+Las \textit{Coplas por la muerte de su padre} son una «colección» de coplas escritas y dedicadas a don Rodrigo Manrique, padre del autor y maestre de la Orden de Santiago, hacia finales de 1476, tras su fallecimiento. El texto presenta una figura ensalzada del maestre como victorioso guerrero que \comillas{\textit{fizo guerras a moros}} [\textit{bellator}], hombre virtuoso y católico honrado, detalles apreciables con claridad, puesto que separa la vivencia en la \textit{fama} de la \textit{terrenal} y la \textit{trascendente}. Utiliza la \comillas{copla de pie quebrado} --tres octosílabos y un tetrasílabo--, lenguaje llano y culto, rimas consonantes y posee erudición histórica, filosófica y teológica.
 
 El título, \textit{Coplas por la muerte de su padre}, resulta un tanto arbitraria si se analizan las rúbricas que la tradición textual transmitió: los testimonios transmitieron \comillas{dezir} [\textit{82*JM}], \comillas{coplas} [\textit{LB3}, \textit{HH1}, \textit{83*IM}] y algún otro \comillas{De don jorge manrique} [\textit{86*RL}]. Parece evidente, pues, que el título no es estrictamente reconstruible aunque, por mayoría, se prefiere \comillas{coplas}, como puede observarse desde la edición de \textcite{Foulché-Delbosc1902} hasta \textcite{Beltrán2013}. Es probable que, como algunos textos medievales, este no se haya concebido con un título como tal, o al menos no como se transmitió.
 
-No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 —seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor— que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron dispersos en cancioneros.
+No se conservaron autógrafos de alguna copla ni testimonios que puedan considerarse apógrafos o idiógrafos. El testimonio más antiguo que contiene la colección de cuarenta coplas es el manuscrito del \textit{Cancionero de Egerton}, y no es sino hasta ca. 1482-83 --seis o siete años tras la redacción y cuatro o cinco tras el fallecimiento del autor-- que aparece en un impreso en carácter de \textit{editio princeps}. Es necesario destacar que los textos de Manrique solo se conservaron dispersos en cancioneros.
 
 \section*{\fontsize{13}{14.35}\selectfont TESTIMONIOS\footnoteC{Se adoptan las siglas utilizadas por \textcite{PérezPriego2017} quien, a su vez, las adopta de Dutton a partir de \textit{El cancinonero del s. XV (ca. 1360-1520)} [7 vols.].}}
 \addcontentsline{toc}{section}{Testimonios}
@@ -116,7 +116,7 @@ Impresión incunable a doble columna; tipografía gótica; Zamora, 1483?; 90 fol
 \section*{\fontsize{13}{14.35}\selectfont CRITERIOS DE EDICIÓN}
 \addcontentsline{toc}{section}{Criterios de edición}
 
-Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnoteC{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} —esto es, \textit{EM6} y \textit{PN1}—, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, por ser el testimonio que el segundo utiliza base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido\footnoteC{Para el \textit{stemma} completo, \textit{cfr.} \textcite[103]{PérezPriego2017}.} a partir de lo anteriormente indicado:
+Para la fijación del texto se tuvo en cuenta el trabajo filológico de \textcite{Beltrán1991,Beltrán2013} y \textcite{PérezPriego1990,PérezPriego2017} y, conforme a ello, se siguió el subarquetipo \textit{α} del \textit{stemma codicum} construido por el segundo. Descartando el subarquetipo \textit{β}, siendo \textit{83*IM} su testimonio más representativo\footnoteC{Aunque el subarquetipo \textit{β} contenga otros testimonios útiles para la reconstrucción del arquetipo \textit{X} --esto es, \textit{EM6} y \textit{PN1}--, a efectos prácticos de esta edición liminar se utilizó únicamente \textit{83*IM} por ser este el testimonio más representativo del subarquetipo, según lo estudiaron \textcite{PérezPriego2017} y \textcite{Beltrán1991,Beltrán2013} y, además, por ser el testimonio que el segundo utiliza base para sus ediciones.}, la filiación de los testimonios se resumiría con el siguiente \textit{stemma} reducido\footnoteC{Para el \textit{stemma} completo, \textit{cfr.} \textcite[103]{PérezPriego2017}.} a partir de lo anteriormente indicado:
 	\begin{center}
 		\begin{tikzpicture}[every node/.style={font=\normalsize}, sibling distance=10mm]
 		
@@ -184,7 +184,7 @@ Las contracciones se separan sin indicación alguna. Las grafías en cursiva cor
 
 El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}.
 
-Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y los pie de página adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante —si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje—, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteC{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base —correcciones, entre otros— y plausibles interpretaciones.
+Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y los pie de página adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteC{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base --correcciones, entre otros-- y plausibles interpretaciones.
 
 \section*{\fontsize{13}{14.35}\selectfont BIBLIOGRAFÍA}
 \addcontentsline{toc}{section}{Bibliografía}
@@ -238,7 +238,7 @@ Constituyen al aparato crítico el orden y rúbricas en los testimonios, el apar
 %Espacio para que el comando que ejecuta el sistema no se quiebre.
 \beginnumbering
 \pstart
-{\fontsize{9}{11}\selectfont RECUERDE}\footnoteC{\comillas{Recuerde} no tiene la acepción de \comillas{traer a la memoria}, sino la de \comillas{despertar} y, para ello, el \textit{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para el vocablo \textit{recordar} \comillas{despertar el que duerme, o boluer en acuerdo, del verbo recordor}; además, la 2ª acepción en el \textit{Diccionario de Autoridades} registra \comillas{Metaphoricamente vale despertar al que está dormido}.} el alma dormida,\\
+{\fontsize{9}{11}\selectfont RECUERDE}\footnoteC{\comillas{Recuerde} no tiene la acepción de \comillas{traer a la memoria}, sino la de \comillas{despertar} y, para ello, el \textit{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para el vocablo \textit{recordar} \comillas{despertar el que duerme, o boluer en acuerdo, del verbo recordor}. Posteriormente se registró el significado \comillas{Metaphoricamente vale despertar al que está dormido} (\textit{Autoridades}, 2ª acepción).} el alma dormida,\\
 avive el seso y despierte\\
 contenplando\\
 cómo se pasa la vida,\\
@@ -300,7 +300,7 @@ no \edtext{curo}{\Afootnote{cureys \textit{LB3}}} de sus \edtext{ficçiones}{\Af
 sus sabores.\\
 Aquel solo me encomie\textit{n}do,\\
 aq\textit{ue}l solo invoco yo \edtext{}{\Afootnote[nosep]{de verdat \textit{a. corr. LB3}}}\\
-de verdad\footnoteC{En \textit{LB3} se redactó \comillas{[de ver] dat} luego de \comillas{ynuoco yo}. Quizá el redactor inicial —o un secundario [\textit{cfr. gl.} XL]— tachó el fragmento por la errónea ubicación y corrigió \comillas{de verdad} en un pequeño espacio entre los vv. 44 y 46. Puesto que se modificó \textit{verdat} por \textit{verdad} en la corrección, para la fijación se reemplazó \textit{t} en \textit{deydat} por \textit{d} para conservar la rima.} \edtext{}{\Afootnote[nosep]{\textit{p. corr. LB3}}},\\
+de verdad\footnoteC{En \textit{LB3} se redactó \comillas{[de ver] dat} luego de \comillas{ynuoco yo}. Quizá el redactor inicial --o un secundario [\textit{cfr. gl.} XL]-- tachó el fragmento por la errónea ubicación y corrigió \comillas{de verdad} en un pequeño espacio entre los vv. 44 y 46. Puesto que se modificó \textit{verdat} por \textit{verdad} en la corrección, para la fijación se reemplazó \textit{t} en \textit{deydat} por \textit{d} para conservar la rima.} \edtext{}{\Afootnote[nosep]{\textit{p. corr. LB3}}},\\
 que en este mu\textit{n}do \edtext{bivie\textit{n}do}{\lemma{biuie\textit{n}do}\Afootnote{vinjendo \textit{HH1}}},\\
 el mu\textit{n}do no conosçió\\
 su deidad.
@@ -439,7 +439,7 @@ en una cosa.
 \edtext{Y pues}{\lemma{y pues}\Afootnote{pero \textit{δ}, \textit{ε}, \textit{83*IM}}} digo que \edtext{acompañen}{\Afootnote{aco\textit{n}pañe \textit{LB3}}}\\
 y \edtext{lleguen}{\Afootnote{llegue \textit{LB3}}} fasta la huesa\\
 co\textit{n} su dueño;\\
-\edtext{por eso}{\Afootnote{por esto \textit{82*JM}; mas por eso \textit{HH1}}} no \edtext{nos engañen}{\Afootnote{nos engañe \textit{LB3}; sengañen \textit{HH1}}}\footnoteC{Se adoptaron las lecciones plurales del texto mayoritario frente a las de número singular —esto es, \comillas{aco\textit{n}pañe}, \comillas{llegue} y \comillas{engañe}— que porta \textit{LB3}.},\\
+\edtext{por eso}{\Afootnote{por esto \textit{82*JM}; mas por eso \textit{HH1}}} no \edtext{nos engañen}{\Afootnote{nos engañe \textit{LB3}; sengañen \textit{HH1}}}\footnoteC{Se adoptaron las lecciones plurales del texto mayoritario frente a las de número singular --esto es, \comillas{aco\textit{n}pañe}, \comillas{llegue} y \comillas{engañe}-- que porta \textit{LB3}.},\\
 pues se va la vida \edtext{apriesa}{\Afootnote{espesa \textit{MN19}}}\\
 como sueño.\\
 \edtext{Y}{\lemma{y}\Afootnote{q\textit{ue HH1}}} los \edtext{plazeres}{\Afootnote{deleytes \textit{δ}, \textit{ε}, \textit{83*IM}}} de acá\\
@@ -744,7 +744,7 @@ de su tierra.
 No dexó grandes thesoros\\
 ni \edtext{alcançó}{\lemma{alcanço}\Afootnote{llego \textit{HH1}}} \edtext{gra\textit{n}des}{\Afootnote{muchas \textit{86*RL}}} riq\textit{ue}zas\\ 
 ni baxillas,\\
-mas fizo \edtext{guerras a moros}{\Afootnote{guerra a los moros \textit{δ}, \textit{MN19}, \textit{83*IM}; gran guerra a moros \textit{HH1}}}\footnoteC{Se siguen las lecciones plurales de \textit{LB3}, porque don Rodrigo Manrique probablemente no participó en una guerra, sino en otras más. Es necesario atender a los datos proporcionados por Fernando del Pulgar en su \textit{Claros varones de Castilla} [ca. 1480-1486] que, en un capítulo dedicado al maestre, el XIII, titulado «El Maestre Don Rodrigo Manrrique, Conde de Paredes» —que ya citó \textcite[cap. IX]{MenendezYPelayo1944}—, los recoge con gran detalle. A continuación, el pasaje según la edición crítica de Tate:\\
+mas fizo \edtext{guerras a moros}{\Afootnote{guerra a los moros \textit{δ}, \textit{MN19}, \textit{83*IM}; gran guerra a moros \textit{HH1}}}\footnoteC{Se siguen las lecciones plurales de \textit{LB3}, porque don Rodrigo Manrique probablemente no participó en una guerra, sino en otras más. Es necesario atender a los datos proporcionados por Fernando del Pulgar en su \textit{Claros varones de Castilla} [ca. 1480-1486] que, en un capítulo dedicado al maestre, el XIII, titulado «El Maestre Don Rodrigo Manrrique, Conde de Paredes» --que ya citó \textcite[cap. IX]{MenendezYPelayo1944}--, los recoge con gran detalle. A continuación, el pasaje según la edición crítica de Tate:\\
 	\noindent\hspace*{0.5cm}«\textit{En las batallas ⁊ muchos recuentros que ovo con moros ⁊ con christianos este cavallero fue el que, mostrando grand esfuerço a los suyo, fería primero en los contrarios. E las gentes de su conpañía, visto el efuerço de su capitán, todos le seguían ⁊ cobravan osadía de pelear. Tenía tan grand conoscimiento de las cosas del canpo, ⁊ proveí[a]las en tal manera que donde él fue principal capitán nunca puso su gente en logar do se oviese de retraer, porque bolver las espaldas al enemigo era tan ageno que su ánimo que elegía antes de recebir la muerte peleando que salvar la vida huyendo.}\\ 
 	\noindent\hspace*{0.5cm}»\textit{Este cavallero osó acometer grandes fazañas. Especialmente escaló una noche la cibdad de Huesca, que es del reino de Granada. E como quier que subiendo el escala los suyos fueron sentidos de los moros, ⁊ fueron algunos derribados del adarve ⁊ feridos en la subida} [...] \textit{subieron el muro peleando ⁊ no fallescieron de sus fuerças defendiéndolo, aunque veían los unos derramar su sangre, los otros caer de la cerca. E de esta manera, matando de los moros ⁊ muriendo de los suyos, este capitán, ferido en el braço de una saeta, peleando entró la cibdad e retroxo los moros fasta que los cercó en la fortaleza.} [...] \textit{Este cavallero duró ⁊ fizo durar a los suyos conbatiendo los moros que tenía cercados, e resistiendo a los moros que le tenía cercado por espacio de dos días, fasta que vino el socorro }[...] \textit{Ganada aquella cibdad, dexado en ella por capitán a un su hermano llamado Gómes Manrrique, ganó otras fortalezas en la comarca. Socorrió muchas vezes algunas cibdades ⁊ villa ⁊ capitanes christianos en tienpo de estrema necesidad. ⁊ fizo tanta guerra en aquellas tierras que en el reino de Granada el nonbre de Rodrigo Ma[n]rrique fue mucho tienpo a los moros grand terror.}»}\\
 gana\textit{n}do sus fortalezas \edtext{}{\Afootnote[nosep]{fortalezas [y villas] \textit{eras. LB3}}}\\
@@ -834,7 +834,7 @@ a su puerta,
 \pstart
 diziendo: «bue\textit{n} cavallero,\\
 dexad el mu\textit{n}do engañoso\\                                                               
-\edtext{sin falago}{\Afootnote{y su [\textit{f}-\textit{h}]alago \textit{δ}, \textit{ε}; con halago \textit{83*IM}}}\footnoteC{Los demás testimonios transmiten «y su [\textit{f}-\textit{h}]alago», que parece tener más sentido, pero que incurre en una hipermetría, porque \textit{h} corresponde a una consonante aspirada o una \textit{f} inicial latina, ya que entre los testimonios alternan \textit{h} [\textit{86*RL}] y \textit{f} [\textit{HH1}, \textit{MN19}], aunque alguno la omite [\textit{82*JM}]; de ser así esto, algo apreciable por la inestabilidad gráfica, la sinalefa no sería posible y, por tanto, sería conveniente adoptar la lección de \textit{LB3}, que es un tetrasílabo. La lección \textit{sin falago} apuntaría —probablemente— a que don Rodrigo Manrique debería dejar el mundo \comillas{sin atender} o \comillas{seguir su} \textit{falago}, un sentido más o menos similar. Quizá la lección \textit{y su }[\textit{f}-\textit{h}]\textit{alago} incurre en una lectio facilior.};\\
+\edtext{sin falago}{\Afootnote{y su [\textit{f}-\textit{h}]alago \textit{δ}, \textit{ε}; con halago \textit{83*IM}}}\footnoteC{Los demás testimonios transmiten «y su [\textit{f}-\textit{h}]alago», que parece tener más sentido, pero que incurre en una hipermetría, porque \textit{h} corresponde a una consonante aspirada o una \textit{f} inicial latina, ya que entre los testimonios alternan \textit{h} [\textit{86*RL}] y \textit{f} [\textit{HH1}, \textit{MN19}], aunque alguno la omite [\textit{82*JM}]; de ser así esto, algo apreciable por la inestabilidad gráfica, la sinalefa no sería posible y, por tanto, sería conveniente adoptar la lección de \textit{LB3}, que es un tetrasílabo. La lección \textit{sin falago} apuntaría --probablemente-- a que don Rodrigo Manrique debería dejar el mundo \comillas{sin atender} o \comillas{seguir su} \textit{falago}, un sentido más o menos similar. Quizá la lección \textit{y su }[\textit{f}-\textit{h}]\textit{alago} incurre en una lectio facilior.};\\
 v\textit{uest}ro coraçó\textit{n} de azero\\
 muestre su esfuerço famoso\\ 
 en este trago.\\
@@ -895,7 +895,7 @@ por las manos;\\
 y co\textit{n} esta confiança\\
 y co\textit{n} la fe ta\textit{n} entera\\
 que tenéis,\\
-partid con buena \edtext{}{\Afootnote[nosep]{bua/bna/vna \textit{LB3}}}\footnoteC{b[uen]a \textit{LB3} (?). En el manuscrito hay una mancha de tinta borrada en el folio arriba de «ua»/«na», que no propicia distinguir correctamente si es un signo de contracción  ̅ , leyéndose así «buena»/«buena» —el copista confunde \textit{n} y \textit{u} incluso en otros lugares del manuscrito—, o constituye un error, «bua». \textcite{PérezPriego1990,PérezPriego2017} y \textcite{Severin2000} leen en conjunto «vna»; Beltrán lee «bua», y sostiene que yace «con corrección, o abreviatura poco visible, interlineada» \textcite[123]{Beltrán1991}.} espera\textit{n}ça,\\
+partid con buena \edtext{}{\Afootnote[nosep]{bua/bna/vna \textit{LB3}}}\footnoteC{b[uen]a \textit{LB3} (?). En el manuscrito hay una mancha de tinta borrada en el folio arriba de «ua»/«na», que no propicia distinguir correctamente si es un signo de contracción  ̅ , leyéndose así «buena»/«buena» --el copista confunde \textit{n} y \textit{u} incluso en otros lugares del manuscrito--, o constituye un error, «bua». \textcite{PérezPriego1990,PérezPriego2017} y \textcite{Severin2000} leen en conjunto «vna»; Beltrán lee «bua», y sostiene que yace «con corrección, o abreviatura poco visible, interlineada» \textcite[123]{Beltrán1991}.} espera\textit{n}ça,\\
 \edtext{que la vida verdadera}{\Afootnote{estotra vida tercera \textit{δ}, \textit{MN19}, \textit{83*IM}}}\\                                                                           
 \edtext{cobraréis}{\lemma{cobrareys}\Afootnote{ganareys \textit{δ}, \textit{MN19}, \textit{83*IM}}}.» 
 \pend
@@ -923,7 +923,7 @@ q\textit{ua}ndo Dios q\textit{ui}ere q\textit{ue} muera,\\
 \end{center}
 \pstart
 »Tú, q\textit{ue} por n\textit{uest}ra maldat\\
-tomaste forma \edtext{çevil}{\lemma{çeuil}\Afootnote{seruil \textit{86*RL}, \textit{MN19}}}\footnoteC{«çeuil» tiene la acepción de «villano», hombre de la villa, opuesto a noble, según \textcite{Lida1947}, quien expone una serie de testimonios tales como \textit{Triunfos} de Juan de Padilla, el Cartujano, y \textit{Diálogo de la lengua} de Juan de Valdés, más otros para ilustrar la historia semántica del vocablo, unido a su hipótesis de que \textit{civil} tenía una acepción adicional, «cruel», según textos de don Juan de Mena. El \textit{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para \textit{cevil} la definición «hombre apocado, y miserable, de ce, que acrecienta la sinificacion, y de vil, que valdra muy vil». A esto acompaña la 3ª acepción del \textit{Diccionario de Autoridades} para \textit{civil}, que es «desestimable, mezquino, ruin, y de baxa condicion y procedéres», que recuerdan \textcite{CorominasYPascual1980-1991} y añaden «[...] actualmente ya se ha anticuado, pero de la que hay multitud de ejemplos desde la \textit{Gr. Conq. de Ultr.} hasta el s. XVII (Salas Barbadillo)». Orduna sostiene que la copla «reproduce en sus cuatro partes evidentes el mismo esquema de motivos. Los primeros 9 versos resumen la invocación a Cristo Salvador del grupo 4-6, llevándola a un plano de comunicación directa [...] los últimos 3 versos concluyen la Oración [...] con el sometimiento total a la clemencia del Salvador» \parencite[145-146]{Orduna1967}; pero esto lo sostiene —siguiendo a \textcite{Foulché-Delbosc1912}— con la lección \textit{servil}, que \textcite{Beltrán1991,Beltrán2013} descarta por \textit{lectio facilior}.}\\
+tomaste forma \edtext{çevil}{\lemma{çeuil}\Afootnote{seruil \textit{86*RL}, \textit{MN19}}}\footnoteC{«çeuil» tiene la acepción de «villano», hombre de la villa, opuesto a noble, según \textcite{Lida1947}, quien expone una serie de testimonios tales como \textit{Triunfos} de Juan de Padilla, el Cartujano, y \textit{Diálogo de la lengua} de Juan de Valdés, más otros para ilustrar la historia semántica del vocablo, unido a su hipótesis de que \textit{civil} tenía una acepción adicional, «cruel», según textos de don Juan de Mena. El \textit{Tesoro de la lengua castellana} de \textcite{Covarrubias1611} registra para \textit{cevil} la definición «hombre apocado, y miserable, de ce, que acrecienta la sinificacion, y de vil, que valdra muy vil». A esto acompaña la definición para \textit{civil} «desestimable, mezquino, ruin, y de baxa condicion y procedéres» (\textit{Autoridades}, 3ª acepción), que recuerdan \textcite{CorominasYPascual1980-1991} y añaden «[...] actualmente ya se ha anticuado, pero de la que hay multitud de ejemplos desde la \textit{Gr. Conq. de Ultr.} hasta el s. XVII (Salas Barbadillo)». Orduna sostiene que la copla «reproduce en sus cuatro partes evidentes el mismo esquema de motivos. Los primeros 9 versos resumen la invocación a Cristo Salvador del grupo 4-6, llevándola a un plano de comunicación directa [...] los últimos 3 versos concluyen la Oración [...] con el sometimiento total a la clemencia del Salvador» \parencite[145-146]{Orduna1967}; pero esto lo sostiene --siguiendo a \textcite{Foulché-Delbosc1912}-- con la lección \textit{servil}, que \textcite{Beltrán1991,Beltrán2013} descarta por \textit{lectio facilior}.}\\
 y \edtext{baxo}{\Afootnote{\textit{om. 82*JM}}} no\textit{n}bre;\\
 \edtext{Tú, que a tu divinidat}{\lemma{tu que a tu}\Afootnote{juntaste \textit{82*JM}}}\\
 ju\textit{n}taste \edtext{cosa}{\Afootnote{avna cosa \textit{82*JM}}} ta\textit{n} vil\\
@@ -942,14 +942,14 @@ me perdona.»
 \pstart
 Así, co\textit{n} tal ente\textit{n}der\\
 todos sentidos humanos\\
-\edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteC{«oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} —y el de Beltrán, en parte—, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} —como diccionario antiguo—, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral —en el vocablo—; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. \textcite{Conde2009} sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción del \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}. \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] —aquel, a su vez, siguiendo a Avicena y su \textit{De anima}—, son la \textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}. Luego, cita dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición de Kerkhof]. Siguiendo esas influencias, resulta en una unidad entre \textit{sentidos} y \textit{entendimiento}, y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}, implicaría en quebrar tal unidad al \comillas{deshacerse} de ambas; y al tratarse de una unidad —siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición—, la lección, como se estudia en ecdótica, no puede ir contra el propio autor.\\ \noindent\hspace*{0.5cm} Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es, «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia la lección \textit{conservados}.}\\
+\edtext{conservados}{\lemma{conseruados}\Afootnote{oluidados \textit{83*IM}}}\footnoteC{«oluidados» pertenece a \textit{83*IM}, testimonio representante del subarquetipo \textit{β}. La elección entre las adiáforas es en extremo compleja porque, siguiendo el \textit{stemma codicum} de \textcite{PérezPriego2017} --y el de Beltrán, en parte--, cada una tiene igual peso en los subarquetipos \textit{α} y \textit{β} por remitir al arquetipo \textit{X}. Cada lección tuvo defensores o «electores»; para la lección \textit{conservados}, \textcite{PérezPriego1990,PérezPriego2017}, \textcite{Conde2009} y \textcite{Gonzalez2019}, y para \textit{olvidados}, su innovador y elector \textcite{Beltrán1991,Beltrán2013,Beltrán2016}. Beltrán escuetamente argumenta en favor de la lección \textit{olvidados} en su edición crítica con el siguiente argumento: «\textit{oluidados} y \textit{conseruados} se reparten en las ramas del \textit{stemma} [...] Prefiero la primera opción, pues \textit{sentido} tiene la acepción "apetito, o parte inferior del hombre" (\textit{Aut.}) reforzado probablemente por el calificativo \textit{humanos}, lo que hace de esta variante un caso evidente de \textit{lectio difficilior}.» \parencite[158]{Beltrán1991}. Tras el comentario de \textcite{Conde2009}, en su edición de 2013, Beltrán le otorga mayor autoridad al \textit{Diccionario de Autoridades} --como diccionario antiguo--, porque refleja «valores arcaicos» y conserva «interpretaciones específicas de las ciencias o el pensamiento antiguo», y porque no es una cuestión puramente léxica, sino de valoración moral --en el vocablo--; y en su extenso estudio del 2016 añade, además, ejemplos textuales de época para justificar la acepción «apetitos». [La lección \textit{conservados} forma parte de la tradición \textit{vulgata} del texto]. \textcite{Conde2009} sostiene, contra Beltrán, que del mismo modo que el editor utiliza la segunda acepción para \textit{sentidos} [apetito], podría utilizar la principal, \textit{potencia}/\textit{facultad} para percibir «las impresiones de los objetos exteriores», y la tercera, \textit{entendimiento}/\textit{razón}, por tanto, no resultaría plausible utilizar la evidencia lexicográfica para adoptar \textit{olvidados} como lección para la \textit{constitutio textus}; y proporciona, además, diferentes testimonios para justificar \textit{conservados} y, de paso, la preeminencia de la 1ª y 3ª acepción en el \textit{Diccionario de Autoridades} para \textit{sentidos}, esto es, \textit{entendimiento}/\textit{razón}. \textcite{PérezPriego2017} sigue a Conde. \textcite{Gonzalez2019} propone que la lección \textit{olvidados} resulta de una trivialización; luego, en su análisis, indica que los \textit{sentidos} no son cinco, sino diez, según la tradición medieval: cinco internos y cinco externos; los externos, los propios de la carne; los internos, siguiendo a Tomás de Aquino [\textit{S. Theol.}, I, q. 78, a. 4] --aquel, a su vez, siguiendo a Avicena y su \textit{De anima}--, son la \textit{sensus communis}, \textit{imaginatio}, \textit{phantasia}, \textit{aestimativa} y \textit{memorativa}. Luego, cita dos textos de autoridades que, con certeza, leyó Manrique: La \comillas{Partida Segunda} de Alfonso X el Sabio [\textit{Siete Partidas}, II, XIII] y la \textit{Coronación del Marqués de Santillana} de Juan de Mena [pp. 90-92 en la edición de Kerkhof]. Siguiendo esas influencias, resulta en una unidad entre \textit{sentidos} y \textit{entendimiento}, y olvidar los \textit{sentidos}, como indica la lección \textit{olvidados}, implicaría en quebrar tal unidad al \comillas{deshacerse} de ambas; y al tratarse de una unidad --siguiendo la evidencia proporcionada acerca de las \textit{ars moriendi} y la tradición--, la lección, como se estudia en ecdótica, no puede ir contra el propio autor.\\ \noindent\hspace*{0.5cm} Puede concluirse que Rodrigo Manrique fallece conservando facultades físicas y psicológicas [\textit{sentidos} y  \textit{entendimiento}], y que fallece en una «recta ley», ejerciendo los deberes propios que le corresponden como \textit{bellator}, esto es, «guerreando» \parencite[52-55]{Gonzalez2019}. La evidencia histórica y la reconstrucción del \textit{contextus} se inclinan hacia la lección \textit{conservados}.}\\
 çercado de su muger\\
 \edtext{}{\linenum{|||||480}\Afootnote[nosep]{\textit{sec. m. LB3}}}\edtext{y de sus fijos y hermanos}{\Afootnote{de sus hijos y ermanos \textit{LB3}; y de fijos y de ermanos \textit{82*JM}, \textit{83*IM}}}\\                                                                 
 y criados,\\
 dio el alma a quien \edtext{ge la dio}{\lemma{geladio}\Afootnote{gloria dio \textit{LB3}}},\\
 el qual \edtext{la ponga}{\lemma{laponga}\Afootnote{ladio \textit{86*RL}}} en el cielo\\
 y en su gloria;\\
-\edtext{q\textit{ue} aunq\textit{ue}}{\Afootnote{y aunque \textit{82*JM}, \textit{MN19}, \textit{83*IM}}} la vida \edtext{murió}{\lemma{murio}\Afootnote{perdio \textit{LB3}, \textit{86*RL}}}\footnoteC{«murió» en \textit{82*JM}, \textit{MN19} y \textit{83*IM}. Continuando el argumento anterior, se opta por la lección \textit{murió} porque, al fallecer Rodrigo Manrique con todos sus «sentidos humanos conservados», él «se conservaría» a través de la memoria de sus allegados, cosa que no acontecería si «perdiese» la vida [carnal], porque «perder» tiene connotaciones negativas según la 6ª y 7ª acepción en el \textit{Diccionario de Autoridades}, que registra «ocasionar algún daño a las cosas, desmejorándolas o desluciéndolas» y «padecer algún daño, ruína o disminución en lo material, inmaterial o espiritual». Si la «perdiese», aceptando estas acepciones, podría «dañar» o «desmejorar» los \textit{sentidos} y el \textit{entendímiento}, facultades que «regresan» en «plena forma» a su dios, como ya demostraron \textcite{Conde2009} y \textcite{Gonzalez2019}. De ser así, \textit{perdió} anularía la lección \textit{conservados} y, por tanto, lo correcto sería \textit{murió} que, además, por pertenecer a los subarquetipos \textit{α} —82*JM y MN19— y \textit{β} —\textit{83*IM}—, restituye la lección del arquetipo \textit{X}.},\\
+\edtext{q\textit{ue} aunq\textit{ue}}{\Afootnote{y aunque \textit{82*JM}, \textit{MN19}, \textit{83*IM}}} la vida \edtext{murió}{\lemma{murio}\Afootnote{perdio \textit{LB3}, \textit{86*RL}}}\footnoteC{«murió» en \textit{82*JM}, \textit{MN19} y \textit{83*IM}. Continuando el argumento anterior, se opta por la lección \textit{murió} porque, al fallecer Rodrigo Manrique con todos sus «sentidos humanos conservados», él «se conservaría» a través de la memoria de sus allegados, cosa que no acontecería si «perdiese» la vida [carnal], porque «perder» tiene connotaciones negativas según las definiciones «ocasionar algún daño a las cosas, desmejorándolas o desluciéndolas» y «padecer algún daño, ruína o disminución en lo material, inmaterial o espiritual» (\textit{Autoridades}, acepciones 6ª y 7ª). Si la «perdiese», aceptando estas acepciones, podría «dañar» o «desmejorar» los \textit{sentidos} y el \textit{entendímiento}, facultades que «regresan» en «plena forma» a su dios, como ya demostraron \textcite{Conde2009} y \textcite{Gonzalez2019}. De ser así, \textit{perdió} anularía la lección \textit{conservados} y, por tanto, lo correcto sería \textit{murió} que, además, por pertenecer a los subarquetipos \textit{α} --82*JM y MN19-- y \textit{β} --\textit{83*IM}--, restituye la lección del arquetipo \textit{X}.},\\
 \edtext{dexónos}{\lemma{dexonos}\Afootnote{nos dexo \textit{82*JM}, \textit{MN19}, \textit{83*IM}}} harto consuelo\\ 
 su memoria.
 \pend
