--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -64,7 +64,7 @@
 \end{flushright}
 
 \begin{flushright}
-	\textit{Documento procesado en} LuaLaTeX \textit{con el paquete} Reledmac \textit{de Maïeul Rouquette}.
+	\textit{Documento compuesto en} LuaLaTeX \textit{con el paquete} Reledmac \textit{de Maïeul Rouquette}.
 \end{flushright}
 \newpage
 
