--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -31,7 +31,7 @@
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 \usetikzlibrary{positioning}
-\setmainfont{Common serif}[Numbers=Lining,BoldFont={},RawFeature={-calt}]
+\setmainfont{Common serif}[Numbers=Lining,BoldFont=,RawFeature=-calt]
 %Tamaño vertical del aparato crítico.
 \Xprenotes{11pt}
 \prenotesX{11pt}
@@ -73,8 +73,8 @@
 
 \pagenumbering{arabic}
 \setcounter{page}{1}
-\section*{\fontsize{13}{14.35}\selectfont APVNTES}
-\addcontentsline{toc}{section}{Apuntes}
+\section*{\fontsize{13}{14.35}\selectfont PREFACIO}
+\addcontentsline{toc}{section}{Prefacio}
 
 Jorge Manrique nació ca. 1440 y falleció en abril de 1479. Una noticia de su fallecimiento la transmite Fernando del Pulgar en su \textit{Crónica de los reyes Católicos}:
 
