--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -14,7 +14,7 @@
 \title{COPLAS POR LA MVERTE DE SV PADRE}
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
-%Aquí cierran los comandos para el documento.
+%
 \Xarrangement{paragraph}
 \Xnonbreakableafternumber
 \Xinplaceoflemmaseparator{0em}
@@ -26,13 +26,14 @@
 \newcommand{\comillas}[1]{«#1»}
 \newcommand{\tsup}[1]{\textsuperscript{#1}}
 \renewcommand{\thefootnoteA}{}
+%
 \fnpos{critical-familiar}
 \fnpos{{A}{familiar},{A}{critical},{C}{familiar}}
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 \usetikzlibrary{positioning}
-\setmainfont{Common serif}[Numbers=Lining,BoldFont=,RawFeature=-calt]
-%Tamaño vertical del aparato crítico.
+\setmainfont{Free-serif}[Numbers=Lining,BoldFont=]
+%
 \Xprenotes{11pt}
 \prenotesX{11pt}
 \Xafterrule{2pt}
@@ -50,7 +51,6 @@
 \setlist{nosep,noitemsep,parsep=0pt}
 %
 %
-
 \begin{document}
 	{\pagenumbering{gobble}
 	\maketitle
@@ -1009,5 +1009,5 @@ Coplas apócrifas o póstumas en la \textit{Glosa Famossisima} de Alonso de Cerv
 	que vivo queda su nombre}.\footnoteC{Beltrán, citando a Luis de Salazar y Castro, recupera «AQVI YACE MVERTO VN HOMBRE, QVE VIVO DEJO SV NOMBRE» \parencite[158]{Beltrán1991}.}
 \relax
 \vfill
-%Espacio para que el comando que ejecuta el sistema no se quiebre. 
+%
 \end{document}
