--- a/COPLAS-MANRIQVE-LaTeX.tex
+++ b/COPLAS-MANRIQVE-LaTeX.tex
@@ -15,20 +15,20 @@
 \author{\fontsize{14}{11.96}\selectfont JORGE MANRIQVE}
 \date{\vspace{60pt}\fontsize{11}{11}\selectfont{EDICIÓN CRÍTICA LIMINAR}\\\fontsize{40}{11}\selectfont{\vfill\LaTeX}}
 %
+\fnpos{critical-familiar}
+\fnpos{{A}{familiar},{A}{critical},{C}{familiar}}
 \Xarrangement{paragraph}
 \Xnonbreakableafternumber
 \Xinplaceoflemmaseparator{0em}
 \Xnumberonlyfirstinline
 \Xnumberonlyfirstintwolines
 \parindentX
-\Xsymlinenum{||}
+\Xsymlinenum{//}
 \Xbeforesymlinenum{-0.5em}
 \newcommand{\comillas}[1]{«#1»}
 \newcommand{\tsup}[1]{\textsuperscript{#1}}
 \renewcommand{\thefootnoteA}{}
 %
-\fnpos{critical-familiar}
-\fnpos{{A}{familiar},{A}{critical},{C}{familiar}}
 \setdefaultlanguage{spanish}
 \setotherlanguage[variant=ancient]{greek}
 \usetikzlibrary{positioning}
@@ -56,7 +56,7 @@
 	\maketitle
 }
 	\newpage
-
+%
 \hskip0pt
 \vfill
 \begin{flushright}
@@ -67,10 +67,10 @@
 	\textit{Documento compuesto en} LuaLaTeX \textit{con el paquete} Reledmac \textit{de Maïeul Rouquette}.
 \end{flushright}
 \newpage
-
+%
 \tableofcontents
 \newpage
-
+%
 \pagenumbering{arabic}
 \setcounter{page}{1}
 \section*{\fontsize{13}{14.35}\selectfont PREFACIO}
@@ -184,7 +184,7 @@ Las contracciones se separan sin indicación alguna. Las grafías en cursiva cor
 
 El orden de las coplas que se sigue es el de \textit{LB3} que, a su vez, coincide con el orden y conclusiones de \textcite{Senabre1983}, \textcite{Palumbo1983}, \textcite{Orduna1967}, \textcite{Beltrán1991,Beltrán2013}, \textcite{PérezPriego1990,PérezPriego2017} y la 1ª edición crítica \parencite{Foulché-Delbosc1902}, descartando así el orden de \textit{82*JM}.
 
-Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y los pie de página adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{||}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteC{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base --correcciones, entre otros-- y plausibles interpretaciones.
+Constituyen al aparato crítico el orden y rúbricas en los testimonios, el aparato de variantes y los pie de página adicionales. El tipo de aparato de variantes es negativo. Luego de indicar el pasaje al que corresponde la variante --si se coloca \comillas{//}, indicará que aún continúa en el mismo pasaje--, se colocará la lección adoptada seguida por el signo \comillas{]} que encierra la lección adoptada, y tras el signo, las lecciones descartadas seguidas por su(s) sigla(s)\footnoteC{Irán en cursiva las siglas y se separarán con comas cada una.}, separada cada unidad por un \comillas{;}. Un ejemplo con la copla V: \comillas{56 quando] mientra \textit{δ}; quanto \textit{HH1}}. Se eludirán variantes gráficas y de espacio. Los comentarios contendrán argumentos en torno a las lecciones adoptadas, problemas respecto al estado del testimonio de base --correcciones, entre otros-- y plausibles interpretaciones.
 
 \section*{\fontsize{13}{14.35}\selectfont BIBLIOGRAFÍA}
 \addcontentsline{toc}{section}{Bibliografía}
